Modification pour utiliser SDL_Renderer
La technique d'utiliser des SDL_Surface pour afficher des images est en
fait dépassée et déconseillée depuis la SDL 2.0. Ici je change donc le
programme pour qu'il initialise et détruise un SDL_Renderer qui utilise
le GPU et la RAM vidéo et est donc beaucoup plus rapide.
Deplus, le jeu tourne maintenant en plein écran avec une résolution
logique de 800x640.
Documentation mise à jour.

--- a/UltimatePenguinRampage_rebuild/doc/latex/class_utils.tex
+++ b/UltimatePenguinRampage_rebuild/doc/latex/class_utils.tex
@@ -34,9 +34,9 @@ Regroupe quelques fonctions d\textquotesingle{}utilité générale.
 Initialise la S\+D\+L et ses principaux composants. 
 
 \begin{DoxyReturn}{Renvoie}
-\{true\} si l\textquotesingle{}initialisation s\textquotesingle{}est correctement déroulée. 
+T\+R\+U\+E si l\textquotesingle{}initialisation s\textquotesingle{}est correctement déroulée. 
 
-false si il y a eu un problème avec l\textquotesingle{}initialisation de la S\+D\+L. 
+F\+A\+L\+S\+E si il y a eu un problème avec l\textquotesingle{}initialisation de la S\+D\+L. 
 \end{DoxyReturn}
 \hypertarget{class_utils_a1a1317e9deaac6dc1ad285d101b6f929}{}\index{Utils@{Utils}!quitter@{quitter}}
 \index{quitter@{quitter}!Utils@{Utils}}
