--- a/UltimatePenguinRampage_rebuild/doc/latex/refman.tex
+++ b/UltimatePenguinRampage_rebuild/doc/latex/refman.tex
@@ -74,8 +74,8 @@
 \fancyhead[RO]{\fancyplain{}{\bfseries\thepage}}
 \fancyfoot[LE]{\fancyplain{}{}}
 \fancyfoot[CE]{\fancyplain{}{}}
-\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Lundi 29 Juin 2015 22\+:26\+:01 pour Ultimate Penguin Rampage par Doxygen }}
-\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Lundi 29 Juin 2015 22\+:26\+:01 pour Ultimate Penguin Rampage par Doxygen }}
+\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Mardi 30 Juin 2015 09\+:41\+:44 pour Ultimate Penguin Rampage par Doxygen }}
+\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Mardi 30 Juin 2015 09\+:41\+:44 pour Ultimate Penguin Rampage par Doxygen }}
 \fancyfoot[CO]{\fancyplain{}{}}
 \fancyfoot[RO]{\fancyplain{}{}}
 \renewcommand{\footrulewidth}{0.4pt}
@@ -131,7 +131,7 @@
 \vspace*{1cm}
 {\large Généré par Doxygen 1.8.10}\\
 \vspace*{0.5cm}
-{\small Lundi 29 Juin 2015 22:26:01}\\
+{\small Mardi 30 Juin 2015 09:41:44}\\
 \end{center}
 \end{titlepage}
 \clearemptydoublepage
