--- a/UltimatePenguinRampage_rebuild/doc/latex/_u_p_r_8cpp.tex
+++ b/UltimatePenguinRampage_rebuild/doc/latex/_u_p_r_8cpp.tex
@@ -3,7 +3,8 @@
 {\ttfamily \#include $<$iostream$>$}\\*
 {\ttfamily \#include \char`\"{}U\+P\+R.\+h\char`\"{}}\\*
 {\ttfamily \#include \char`\"{}Utils.\+h\char`\"{}}\\*
-Graphe des dépendances par inclusion de U\+P\+R.\+cpp\+:\nopagebreak
+Graphe des dépendances par inclusion de U\+P\+R.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -14,10 +15,26 @@ Graphe des dépendances par inclusion de U\+P\+R.\+cpp\+:\nopagebreak
 \begin{DoxyCompactItemize}
 \item 
 int \hyperlink{_u_p_r_8cpp_a700a0caa5b70a06d1064e576f9f3cf65}{main} (int argc, char $\ast$args\mbox{[}$\,$\mbox{]})
-\begin{DoxyCompactList}\small\item\em La fonction main. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em La fonction main. \end{DoxyCompactList}\item 
+int \hyperlink{_u_p_r_8cpp_a07eb386ace866c37e5a61c566029ebf1}{gestion\+Menu\+Principal} ()
+\begin{DoxyCompactList}\small\item\em Gère l\textquotesingle{}affichage et le contrôle du menu principal. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Documentation des fonctions}
+\hypertarget{_u_p_r_8cpp_a07eb386ace866c37e5a61c566029ebf1}{}\index{U\+P\+R.\+cpp@{U\+P\+R.\+cpp}!gestion\+Menu\+Principal@{gestion\+Menu\+Principal}}
+\index{gestion\+Menu\+Principal@{gestion\+Menu\+Principal}!U\+P\+R.\+cpp@{U\+P\+R.\+cpp}}
+\subsubsection[{gestion\+Menu\+Principal()}]{\setlength{\rightskip}{0pt plus 5cm}int gestion\+Menu\+Principal (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}\label{_u_p_r_8cpp_a07eb386ace866c37e5a61c566029ebf1}
+
+
+Gère l\textquotesingle{}affichage et le contrôle du menu principal. 
+
+\begin{DoxyReturn}{Renvoie}
+Le numéro de l\textquotesingle{}option choisie. 
+\end{DoxyReturn}
 \hypertarget{_u_p_r_8cpp_a700a0caa5b70a06d1064e576f9f3cf65}{}\index{U\+P\+R.\+cpp@{U\+P\+R.\+cpp}!main@{main}}
 \index{main@{main}!U\+P\+R.\+cpp@{U\+P\+R.\+cpp}}
 \subsubsection[{main(int argc, char $\ast$args[])}]{\setlength{\rightskip}{0pt plus 5cm}int main (
