--- a/UltimatePenguinRampage_rebuild/doc/latex/_utils_8cpp.tex
+++ b/UltimatePenguinRampage_rebuild/doc/latex/_utils_8cpp.tex
@@ -3,7 +3,8 @@
 {\ttfamily \#include $<$iostream$>$}\\*
 {\ttfamily \#include \char`\"{}U\+P\+R.\+h\char`\"{}}\\*
 {\ttfamily \#include \char`\"{}Utils.\+h\char`\"{}}\\*
-Graphe des dépendances par inclusion de Utils.\+cpp\+:\nopagebreak
+Graphe des dépendances par inclusion de Utils.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
