Ajout de tâches

--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/1.1.affichage-de-la-carte.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/1.1.affichage-de-la-carte.md
@@ -1,4 +1,4 @@
-﻿# 1. Recréer l'affichage de la carte.
+﻿#### 1.1. Recréer l'affichage de la carte
 
 - [ ] Boucle while dans Arene::lancer().
 - [ ] Objet caméra dans Arene.
