--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/1.1.affichage-de-la-carte.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/1.1.affichage-de-la-carte.md
@@ -1,6 +1,8 @@
 ﻿#### 1.1. Recréer l'affichage de la carte
 
-- [ ] Boucle while dans Arene::lancer().
-- [ ] Objet caméra dans Arene.
-- [ ] Fonction render(SDL_Rect camera) dans Carte.
-  - [ ] Fonction render(int id_tile, int x, int y) dans Tileset.
+- [x] Boucle while dans Arene::lancer().
+- [x] Méthode de sortie temporaire avec la touche "q".
+- [x] Objet caméra dans Arene.
+- [x] Fonction render(SDL_Rect camera) dans Carte.
+  - [x] Fonction render(int id_tile, int x, int y) dans Tileset.
+- [x] Appel à Carte::render() depuis Arene::lancer().
