J'avais oublié de cocher la case...

--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/1.affichage-de-la-carte.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/1.affichage-de-la-carte.md
@@ -1,5 +1,5 @@
 ﻿### 1. Implémentation de la carte
 
-1. [ ] Recréer l'affichage de la carte.
+1. [x] Recréer l'affichage de la carte.
 2. [ ] Implémenter les tiles solides et les collisions avec le Héros.
 3. [ ] Créer des points / zones de génération d'ennemis.
