--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/2.1.fondations-entites-joueur.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/2.1.fondations-entites-joueur.md
@@ -1,6 +1,7 @@
 ﻿#### 2.1. Fondations des Entités et du Joueur
 
-- [ ] Classe abstraite Entite.
-- [ ] Fonctions creer(), update() et detruire() dans Entite
-- [ ] Classe Joueur étendue depuis Entite.
-- [ ] Instructions pour créer, update et détruire le Joueur dans les fonctions d'Arene.
+- [x] Classe abstraite Entite.
+- [x] ~~Fonctions creer(), update() et detruire() dans Entite.~~ Fonction update() dans Entite. (La création et suppression des entités seront gérés par le constructeur et le destructeur.)
+- [x] Classe Joueur étendue depuis Entite.
+- [x] Ajout d'un pointeur vers un objet Joueur dans la classe Arene.
+- [x] Instructions pour créer, update et détruire le Joueur dans les fonctions d'Arene.
