--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
@@ -1,6 +1,6 @@
 ﻿### 2. Implémentation du Héros et de ses Ennemis
 
-1. [ ] Fondations des Entités (et du Joueur par extension).
+1. [x] Fondations des Entités (et du Joueur par extension).
 2. [ ] Contrôle et affichage du joueur.
 3. [ ] Fondations des Armes et ajout de la Boule de Neige.
 4. [ ] Ajout des statistiques et caractéristiques du Joueur.
