--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
@@ -1,7 +1,7 @@
 ﻿### 2. Implémentation du Héros et de ses Ennemis
 
 1. [x] Fondations des Entités (et du Joueur par extension).
-2. [ ] Contrôle et affichage du joueur.
+2. [x] Contrôle et affichage du joueur.
 3. [ ] Fondations des Armes et ajout de la Boule de Neige.
 4. [ ] Ajout des statistiques et caractéristiques du Joueur.
 5. [ ] Ajout des Ennemis et path-finding simple vers le Joueur.
