Modification des listes de tâches
- Ajout des détails pour l'implémentation des Armes.
- Idée pour tester les collisions avec les tiles solides de la carte.

--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/2.héros-et-ennemis.md
@@ -6,4 +6,4 @@
 4. [ ] Ajout des statistiques et caractéristiques du Joueur.
 5. [ ] Ajout des Ennemis et path-finding simple vers le Joueur.
 6. [ ] Les ennemis tirent des boules de neige simples sur le Joueur.
-7. [ ] Collisions entre projectiles et Entités. Dégâts simples et mort.
+7. [ ] Collisions entre projectiles et Entités ainsi que la carte. Dégâts simples et mort.
