--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/1.affichage-de-la-carte.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/1.affichage-de-la-carte.md
@@ -1,5 +1,8 @@
-﻿### 1. Implémentation de la carte
+﻿#### 1.1. Recréer l'affichage de la carte
 
-1. [x] Recréer l'affichage de la carte.
-2. [x] Implémenter les tiles solides et les collisions avec le Héros.
-3. [ ] Créer des points / zones de génération d'ennemis.
+- [x] Boucle while dans Arene::lancer().
+- [x] Méthode de sortie temporaire avec la touche "q".
+- [x] Objet caméra dans Arene.
+- [x] Fonction render(SDL_Rect camera) dans Carte.
+  - [x] Fonction render(int id_tile, int x, int y) dans Tileset.
+- [x] Appel à Carte::render() depuis Arene::lancer().
