--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/5.fichier-arene-et-chargement.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/5.fichier-arene-et-chargement.md
@@ -1,8 +1,8 @@
 ﻿#### 5. Création fichier arène et chargement.
 
-- [ ] Créer "rsc/arenes/arene_01.txt"
-  - [ ] En-tête [infos_arene]
-  - [ ] Chemin d'accès à la carte rsc/map/carte_test_1.txt
-- [ ] Ajouter le chargement du fichier d'arène dans Arene::charger().
-  - [ ] Restructurer l'appel à Arene::charger() dans Jeu.
-  - [ ] Restructurer le chargement de la Carte avec le chemin d'accès chargé.
+- [x] Créer "rsc/arenes/arene_01.txt"
+  - [x] En-tête [infos_arene]
+  - [x] Chemin d'accès à la carte rsc/map/carte_test_1.txt
+- [x] Ajouter le chargement du fichier d'arène dans Arene::charger().
+  - [x] Restructurer l'appel à Arene::charger() dans Jeu.
+  - [x] Restructurer le chargement de la Carte avec le chemin d'accès chargé.
