--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/0.liste-taches.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/0.liste-taches.md
@@ -5,8 +5,8 @@
 3. [x] Contrôle et affichage du joueur.
 4. [x] Implémenter les tiles solides et les collisions avec le Héros.
 5. [x] Créer fichier d'arène et implémenter son chargement.
-6. [ ] Ajout de la classe Arme et chargement des armes avec fichier.
-  - [ ] Arme n°1 : Boule de neige.
+6. [x] Ajout de la classe Arme et chargement des armes avec fichier.
+  - [x] Arme n°1 : Boule de neige.
 7. [ ] Ajout de l'attribution d'armes au Joueur au début de l'Arène.
 8. [ ] Création de la classe Projectile et implémentation du tir.
 9. [ ] Ajout de caractéristiques simples pour le Joueur.
