M-à-j liste des tâches

--- a/UltimatePenguinRampage_rebuild/tâches/essentielles/0.liste-taches.md
+++ b/UltimatePenguinRampage_rebuild/tâches/essentielles/0.liste-taches.md
@@ -8,7 +8,7 @@
 6. [x] Ajout de la classe Arme et chargement des armes avec fichier.
   - [x] Arme n°1 : Boule de neige.
 7. [x] Ajout de l'attribution d'armes au Joueur au début de l'Arène.
-8. [ ] Création de la classe Projectile et implémentation du tir.
+8. [x] Création de la classe Projectile et implémentation du tir.
 9. [ ] Ajout de caractéristiques simples pour le Joueur.
 10. [ ] Ajout des Ennemis et path-finding simple vers le Joueur.
 11. [ ] Les ennemis tirent des boules de neige simples sur le Joueur.
