Ajoute des points de vie au joueur
Ajoute un attribut int m_points_de_vie au joueur pour contenir les points et initialise cet attribut à 0 par défaut ou à 100 dans le constructeur de chargement.
Ajoute la fonction Joueur::infligerDegats(int) pour infliger des dégâts au joueur en passant la quanité en paramètre. Cette quantité est immédiatement déduite aux points de vie du joueur.

Liste des tâches complétée : 9.

Pas de compilation.

--- a/UltimatePenguinRampage_rebuild/taches/essentielles/9.-caracteristiques-joueur.md
+++ b/UltimatePenguinRampage_rebuild/taches/essentielles/9.-caracteristiques-joueur.md
@@ -1,5 +1,5 @@
 ﻿#### 9. Caractéristiques simples pour le joueur
 
-- [ ] Ajout dans Joueur d'un attribut points de vie et initialisation par défaut.
-- [ ] Initialisation des points de vie à 100 dans le constructeur de chargement.
-- [ ] Ajout d'une fonction pour infliger des dégâts au joueur.
+- [x] Ajout dans Joueur d'un attribut points de vie et initialisation par défaut.
+- [x] Initialisation des points de vie à 100 dans le constructeur de chargement.
+- [x] Ajout d'une fonction pour infliger des dégâts au joueur.
