--- a/UltimatePenguinRampage/taches/essentielles/0.liste-taches.md
+++ b/UltimatePenguinRampage/taches/essentielles/0.liste-taches.md
@@ -10,6 +10,7 @@
 7. [x] Ajout de l'attribution d'armes au Joueur au début de l'Arène.
 8. [x] Création de la classe Projectile et implémentation du tir.
 9. [x] Ajout de caractéristiques simples pour le Joueur.
-10. [ ] Ajout des Ennemis et path-finding simple vers le Joueur.
+10. [ ] Restructuration des entités et création de la classe intermédiaire Personnage.
+11. [ ] Ajout des ennemis et path-finding vers le joueur.
 11. [ ] Les ennemis tirent des boules de neige simples sur le Joueur.
 12. [ ] Collisions entre projectiles et Entités ainsi que la carte. Dégâts simples et mort.
