--- a/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
+++ b/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
@@ -1,10 +1,10 @@
 ﻿#### 10. Restructuration des Entités.
 
-- [ ] Ajout d'un booléen pour savoir si l'entité se déplace.
-- [ ] Implémentation de la partie déplacement de la fonction update() directement dans Entite
-- [ ] Implémentation des collisions avec la carte dans Entite.
-- [ ] Appel de Entite::update() dans Joueur::update() après le changement de direction.
-- [ ] Réglage du booléen dans Joueur::update() avant l'appel à Entite::update().
+- [x] Ajout d'un booléen pour savoir si l'entité se déplace.
+- [x] Implémentation de la partie déplacement de la fonction update() directement dans Entite
+- [x] Implémentation des collisions avec la carte dans Entite.
+- [x] Appel de Entite::update() dans Joueur::update() après le changement de direction.
+- [x] Réglage du booléen dans Joueur::update() avant l'appel à Entite::update().
 - [ ] Implémentation similaires des changements dans Projectile::update().
 - [ ] Compilation et test de fonctionnement normal, corrections si nécessaires.
 - [ ] Changement du chargement des images des projectiles dans Jeu.
