Corrige le problème de collisions
Dû au déplacement de la fonctionnalité de déplacement des entités directement
dans Entite::update() et au copier-coller brut du calcul de collisions, les
collisions des projectiles n'étaient par correctement calculées. Ceci était
dû au fait que la fonction utilisait les mêmes variables pour les dimensions
des tiles de la carte et pour les dimensions de l'image de l'Entité.

Ce commit ajoute donc deux autres variables (largeur_entite et hauteur_entite)
dans Entite::update() et modifie les calculs dans les différents cas de
collisions afin que les dimensions de l'image de l'entité soient aussi prises
en compte lors de la détection des collisions lors d'un éventuel déplacement.

Liste des tâches mise à jour : 10.

Compilation fonctionelle.

--- a/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
+++ b/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
@@ -5,8 +5,10 @@
 - [x] Implémentation des collisions avec la carte dans Entite.
 - [x] Appel de Entite::update() dans Joueur::update() après le changement de direction.
 - [x] Réglage du booléen dans Joueur::update() avant l'appel à Entite::update().
-- [ ] Implémentation similaires des changements dans Projectile::update().
-- [ ] Compilation et test de fonctionnement normal, corrections si nécessaires.
+- [x] Implémentation similaires des changements dans Projectile::update().
+- [x] Compilation et test de fonctionnement normal, corrections si nécessaires.
+- Fonctionnement anormal des collisions.
+  - [x] Restructuration des collisions ~~(implémentation possible de l'idée 0.1.)~~.
 - [ ] Changement du chargement des images des projectiles dans Jeu.
 - [ ] Fondations de la classe Personnage.
 - [ ] Transfert des constructeurs et de certains attributs de Joueur vers Personnage.
