Change le chargement des images des projectiles
Les images des projectiles sont désormais contenues dans un vecteur de Texture*
statique contenu par Jeu. Elles y sont chargées en même temps que les
Projectile grâce au chemin d'accès indiqué dans la liste des projectiles (à
changer).

Lors de la construction par copie d'un Projectile, celui récupère l'image qui
lui correspond depuis Jeu et, comme avant, remet le pointeur m_image à NULL
dans son destructeur afin que l'image se soit par supprimée deux fois.

Liste des tâches lise à jour : 10.

Compilation fonctionne.

--- a/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
+++ b/UltimatePenguinRampage/taches/essentielles/10.restructuration-entites.md
@@ -9,6 +9,6 @@
 - [x] Compilation et test de fonctionnement normal, corrections si nécessaires.
 - Fonctionnement anormal des collisions.
   - [x] Restructuration des collisions ~~(implémentation possible de l'idée 0.1.)~~.
-- [ ] Changement du chargement des images des projectiles dans Jeu.
+- [x] Changement du chargement des images des projectiles dans Jeu.
 - [ ] Fondations de la classe Personnage.
 - [ ] Transfert des constructeurs et de certains attributs de Joueur vers Personnage.
